--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,137 +3,32 @@
 # MINITAGE EGG  BUILDOUT
 #
 ################################################################################
-[project]
+[buildout]
 eggs-directory=${buildout:directory}/../../eggs/cache
 develop-eggs-directory=${buildout:directory}/../../eggs/develop-cache
-directory=${buildout:directory}/../../
-dependencies=${buildout:directory}/../../dependencies
-sys=${buildout:directory}/../../sys
 parts =
     site-packages-2.5
     site-packages-2.4
-[buildout]
-python = python2.4
 versions = versions
-executable = python2.4
-parts = ${project:parts}
-#install-from-cache=true
-extra-paths=
-find-links =
-    http://dist.plone.org
-    http://${mirrors:zope}/ppix/
-    http://${mirrors:zope}/distribution/
-    http://effbot.org/downloads
-    http://${mirrors:minitage}/eggs
-eggs =
-develop =
-
-
-hooks-directory = ${buildout:directory}/hooks
-eggs-directory = ${project:eggs-directory}
-develop-eggs-directory = ${project:develop-eggs-directory}
-parts-directory=${buildout:directory}
-# Set our 2.4 python
-[python2.4]
-executable=${project:dependencies}/python-2.4/part/bin/python
-name=python2.4
-[python2.5]
-executable=${project:dependencies}/python-2.5/part/bin/python
-name=python2.5
 [versions]
-bopen.recipe.libinc = 0.2.1
-elementtree = 1.2.7-20070827-preview
-ftpparse = 0.93
-hexagonit.recipe.cmmi = 1.1.1
-hexagonit.recipe.download = 1.2.0
-lxml = 2.0beta1
-matplotlib = 0.91.2
-
-numpy = 1.0.4
-PILwoTk = 1.1.6.3
-plone.recipe.zope2install = 1.2
-plone.recipe.zope2instance = 1.3
-psycopg2 = 2.0.6
-pycairo = 1.4.12
-python-ldap = 2.3.1
-setuptools = 0.6c7
-zc.recipe.egg = 1.0.0
-[python-2.4]
-location=${project:dependencies}/python-2.4/part
-include=${project:dependencies}/python-2.4/part/include
-lib=${project:dependencies}/python-2.4/part/lib
-[python-2.5]
-location=${project:dependencies}/python-2.5/part
-include=${project:dependencies}/python-2.5/part/include
-lib=${project:dependencies}/python-2.5/part/lib
-[postgresql]
-location=${project:dependencies}/postgresql-8.2/part
-include=${project:dependencies}/postgresql-8.2/part/include
-lib=${project:dependencies}/postgresql-8.2/part/lib
-[readline]
-location=${project:dependencies}/readline-5.2/part
-include=${project:dependencies}/readline-5.2/part/include
-lib=${project:dependencies}/readline-5.2/part/lib
-[openssl]
-location=${project:dependencies}/openssl-0.9/part
-include=${project:dependencies}/openssl-0.9/part/include
-lib=${project:dependencies}/openssl-0.9/part/lib
+minitage.core=0.0.4
+minitage.recipe=0.0.1
+setuptools = 0.6c8
+[minitage]
+dependencies = readline-5.2 postgresql-8.2 openssl-0.9
 [site-packages-2.4]
+name=site-packages-2.4
 python = python2.4
-recipe = minitage.recipe.du
-freebsd-patches=
-    ${buildout:directory}/patches/patch-psycopg-config.h
+recipe = minitage.recipe:du
+freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
 # we mirror it as the initd.org  mirror is down every day.
-url  = http://${mirrors:minitage}/eggs/psycopg2-2.0.6.tar.gz
-#build_ext =
-#    -DPSYCOPG_EXTENSIONS -DPSYCOPG_DISPLAY_SIZE -DPSYCOPG_NEW_BOOLEAN -DHAVE_PQFREEMEM,HAVE_PQPROTOCOL3
-path=
-    ${postgresql:location}/bin
-includes=
-    ${python-2.4:location}/include
-    ${postgresql:location}/include
-    ${readline:location}/include
-    ${openssl:location}/include
-libraries=
-    ${openssl:location}/lib
-    ${python-2.5:location}/lib
-    ${postgresql:location}/lib
-    ${readline:location}/lib
-rpath=
-    ${site-packages-2.4:libraries}
+url  = http://${mirrors:minitage}/psycopg2-2.0.6.tar.gz
 [site-packages-2.5]
+name=site-packages-2.5
 python = python2.5
-recipe = minitage.recipe.du
-freebsd-patches=
-    ${buildout:directory}/patches/patch-psycopg-config.h
+recipe = minitage.recipe:du
+freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
 # we mirror it as the initd.org  mirror is down every day.
-url  = http://${mirrors:minitage}/eggs/psycopg2-2.0.6.tar.gz
-#build_ext =
-#    -DPSYCOPG_EXTENSIONS -DPSYCOPG_DISPLAY_SIZE -DPSYCOPG_NEW_BOOLEAN -DHAVE_PQFREEMEM,HAVE_PQPROTOCOL3
-path=
-    ${postgresql:location}/bin
-includes=
-    ${python-2.5:location}/include
-    ${postgresql:location}/include
-    ${readline:location}/include
-    ${openssl:location}/include
-libraries=
-    ${openssl:location}/lib
-    ${python-2.5:location}/lib
-    ${postgresql:location}/lib
-    ${readline:location}/lib
-rpath=
-    ${site-packages-2.5:libraries}
-###############################################################################
-# MIRRORS
-################################################################################
+url  = http://${mirrors:minitage}/psycopg2-2.0.6.tar.gz
 [mirrors]
-# in case the SF mirror is down, prodiving threes
-# take care to not put "/" at the end, it can mess SF rewrite rules ;)
-#sourceforge = belnet.dl.sourceforge.net
-#sourceforge = dfn.dl.sourceforge.net
-sourceforge = ovh.dl.sourceforge.net
-minitage = distfiles.minitage.org
-plone = plone.org
-zope = download.zope.org
-
+minitage = distfiles.minitage.org/public/externals/minitage
