--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,15 +14,13 @@ minitage.recipe=0.0.1
 setuptools = 0.6c8
 
 [site-packages-2.4]
-name=site-packages-2.4
-recipe = minitage.recipe:du
-freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
+recipe = minitage.recipe:egg
+psycopg2-freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
 url  = http://${mirrors:minitage}/psycopg2-2.0.6.tar.gz
 
 [site-packages-2.5]
-name=site-packages-2.5
-recipe = minitage.recipe:du
-freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
+recipe = minitage.recipe:egg
+psycopg2-freebsd-patches= ${buildout:directory}/patches/patch-psycopg-config.h
 url  = http://${mirrors:minitage}/psycopg2-2.0.6.tar.gz
 
 [mirrors]
