--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts =
     site-packages-2.4
 versions = versions
 [versions]
+psycopg2 = 2.0.6
 minitage.core=0.0.4
 minitage.recipe=0.0.1
 setuptools = 0.6c8
