--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ versions = versions
 [versions]
 psycopg2 = 2.0.6
 minitage.core>=0.0.4
-minitage.recipe=0.0.1
+minitage.recipe  >= 0.0.1
 setuptools = 0.6c8
 
 [site-packages-2.4]
